init texture_mapping shader

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 		<!-- Shader -->
 		<script src="Shaders/fragment_shader.glsl.js" defer></script>
 		<script src="Shaders/vertex_shader.glsl.js" defer></script>
+		<script src="Shaders/texture_map.js"></script>
 
 		<!-- Utils -->
 		<script src="Utils/webgl-utils.js" defer></script>
