--- a/src/index.html
+++ b/src/index.html
@@ -106,11 +106,11 @@
 				<div>
 					Texture:
 					<select id="textureOption" name="textureOption">
-						<option value="reflective" selected="selected">
+						<option value="0" selected="selected">
 							Reflective
 						</option>
-						<option value="custom">Custom</option>
-						<option value="bump">Bump</option>
+						<option value="0">Custom</option>
+						<option value="1">Bump</option>
 					</select>
 				</div>
 			</div>
