[FIX] save texture
Co-authored-by: jakartasipirok <jakartasipirok@users.noreply.github.com>

--- a/src/index.html
+++ b/src/index.html
@@ -138,11 +138,12 @@
 				<div>
 					Texture:
 					<select id="textureOption" name="textureOption">
-						<option value="0" selected="selected">
+						<option value="2" selected="selected">
 							Reflective
 						</option>
-						<option value="0">Custom</option>
+						<option value="3">Custom</option>
 						<option value="1">Bump</option>
+						<option value="0">None</option>
 					</select>
 				</div>
 			</div>
