--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
 		<!-- Utils -->
 		<script src="Utils/webgl-utils.js" defer></script>
+		<script src="Utils/Animation.js" defer></script>
 		<script src="Utils/MainObj.js" defer></script>
 		<script src="Utils/RecursionObject.js" defer></script>
 		<script src="Utils/Render.js" defer></script>
@@ -65,10 +66,21 @@
 				</div>
 			</div>
 			<div class="right-container">
-				<div id="time-between-frames"></div>
+				<label for="time-between-frames">time between frames:</label>
+				<input
+				type="range"
+				name="time-between-frames"
+				min="0"
+				max="2"
+				value="1"
+				step="0.1"
+				id="time-between-frames"
+				oninput="this.nextElementSibling.value = this.value"
+				/>
+				<output id="output-time-between-frames">1</output>
 				<div class="horizontal-box justify-start">
-					<p>Save and Load: </p>
-					<button disabled="true">Save as</button>
+					<p>Load frame: </p>
+					<button disabled="true">Load</button>
 					<input type="file" id="input-animation" accept=".json">
 				</div>
 			</div>
@@ -160,6 +172,7 @@
 							id="translasiX"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-trans-x"t>0</output>
 					</div>
 					<br>
 					<div>
@@ -173,6 +186,7 @@
 							id="translasiY"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-trans-y"t>0</output>
 					</div>
 					<br>
 					<div>
@@ -186,6 +200,7 @@
 							id="translasiZ"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-trans-z"t>0</output>
 					</div>
 				</div>
 				<h3>Angle</h3>
@@ -201,6 +216,7 @@
 							id="angleX"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-angle-x"t>0</output>
 					</div>
 					<br>
 					<div>
@@ -214,6 +230,7 @@
 							id="angleY"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-angle-y"t>0</output>
 					</div>
 					<br>
 					<div>
@@ -227,6 +244,7 @@
 							id="angleZ"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-angle-z"t>0</output>
 					</div>
 				</div>
 				<div>
@@ -248,6 +266,7 @@
 							step="0.1"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-scale-x"t>0</output>
 					</div>
 					<br>
 					<div>
@@ -262,6 +281,7 @@
 							step="0.1"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-scale-y"t>0</output>
 					</div>
 					<br>
 					<div>
@@ -276,6 +296,7 @@
 							step="0.1"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-scale-z"t>0</output>
 					</div>
 				</div>
 				<h3>Camera</h3>
@@ -291,6 +312,7 @@
 							id="cameraRad"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-camera-rad"t>0</output>
 					</div>
 					<br>
 					<div>
@@ -304,6 +326,7 @@
 							id="cameraAngle"
 							oninput="this.nextElementSibling.value = this.value"
 						/>
+						<output id="output-camera-angle"t>0</output>
 					</div>
 				</div>
 			</div>
